--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
@@ -16,7 +17,9 @@
     "mongoose": "^5.1.7",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "passport": "^0.4.0",
+    "passport-facebook-token": "^3.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
